fix: add aspect ratio to fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 :root {
   --primary-color: #fff;
-  --background-color: #233371;
+  --background-color: #000;
   --secondary-color: #e50914;
 }
 body {
@@ -19,6 +19,16 @@ body {
   color: var(--primary-color);
   font-size: 16px;
 }
+.media_element{
+  border-radius: 0.25rem;
+}
+.media_element > img {
+  width: 100%;
+  aspect-ratio: 16/ 9;
+  object-fit: cover; 
+  cursor: pointer;
+}
+
 
  /* Links */
  a {
